# openbot-rs

./: Cargo.toml
src/: main.rs  user_data.json
src/commands/: dailyrep.rs  mod.rs  rep.rs  rust.rs
